bus image change

--- a/Advanced No Contact Delivery.html
+++ b/Advanced No Contact Delivery.html
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                     <div class="card bg-dark text-white wow animated fadeInUp" data-wow-delay="900ms">
-                        <img src="CSS/images/bus.png" class="card-img-top" alt="Bus">
+                        <img src="CSS/images/bus2.jpg" class="card-img-top" alt="Bus">
                         <div class="card-body">
                             <h5 class="card-title">Stage 3</h5>
                             <p class="card-text">Customers will be provided delivery options. The customers can opt to deliver their items by transport bus, which will deliver each day's orders in bulk from 4:00 p.m. to 8:00 p.m, or by auto-rikshaw/cab, which will collect the order based on instant availability.</p>
