--- a/Advanced No Contact Delivery.html
+++ b/Advanced No Contact Delivery.html
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                     <div class="card bg-dark text-white wow animated fadeInUp" data-wow-delay="700ms">
-                        <img src="CSS/images/rupeemin.jpg" class="card-img-top" alt="">
+                        <img src="CSS/images/rupeemin1.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Stage 5</h5>
                             <p class="card-text">The bill can be paid via UPI, Net Banking, Credit Card or Debit Card. There will be an option for donation of additional amounts too.
