--- a/Advanced No Contact Delivery.html
+++ b/Advanced No Contact Delivery.html
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <div class="card bg-dark text-white wow animated fadeInUp" data-wow-delay="700ms">
-                        <img src="CSS/images/bill.jpg" class="card-img-top" alt="">
+                        <img src="CSS/images/bill1.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Stage 2</h5>
                             <p class="card-text">Upon Choosing the shop, the items present in the shop will be displayed along with its prices. A final bill with total cost and delivery charges will be displayed. (Delivery is free for 5km radius)</p>
