added preloader section

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 </head>
 
 <body>
-
-  <div id="loader">
-    <img src="CSS/images/Preloader_3.gif" alt="X">
-  </div>
-
+  <section id="loader">
+    <div>
+      <img src="CSS/images/Preloader_3.gif" alt="X">
+    </div>  
+  </section>
   <section id="header" class="mt-0">
     <div class="container mb-2">
       <div class="">
