--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
             <a class="nav-item nav-link" href="#Services">SERVICES</a>
             <a class="nav-item nav-link" href="#Donations">DONATIONS</a>
             <a class="nav-item nav-link" href="#Volunteer">VOLUNTEER</a>
-            <a class="nav-item nav-link" href="#fb">FEEDBACK</a>
+            <a class="nav-item nav-link" href="#contact">CONTACT</a>
           </div>
           <div class="navbar-nav">
             <a class="nav-item nav-link btn btn-outline-success mb-3 mb-md-1" href="https://www.pmcares.gov.in/en/"
@@ -240,25 +240,6 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <section id="feedback_wrapper">
-      <div class="row justify-content-center mt-4">
-        <h3 class="my-4 wow animated fadeInUp col-12 text-center" data-wow-delay="500ms" id="fb">
-          Feedback Form
-        </h3>
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-12 col-md-10">
-              <div class="fimg" style="background-image: url(CSS/images/feedback.jpg);"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row justify-content-center wow animated fadeInUp" data-wow-delay="800ms">
-        <iframe
-          src="https://docs.google.com/forms/d/e/1FAIpQLSdmEsZXV1V1_BmYL4fg2AN8z-AFHiSQ40w0ZMbHliz94cXxNw/viewform?embedded=true"
-          width="640" height="706" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
     </section>
     <section id="Emergency">
@@ -443,7 +424,7 @@
           <div class="col-12 col-lg-6 mt-4 mt-lg-1">
             <div class="row justify-content-center mapxx">
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15717.132266812512!2d76.3580909!3d9.9934604!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc81786bb40617774!2sRajagiri%20School%20of%20Engineering%20%26%20Technology!5e0!3m2!1sen!2sin!4v1593065372478!5m2!1sen!2sin"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15718.81559202524!2d76.28702397735186!3d9.958575336072245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0872c7abe6c9e7%3A0x7138a08633b8c9dd!2sPanampilly%20Nagar%2C%20Kochi%2C%20Kerala!5e0!3m2!1sen!2sin!4v1599982027714!5m2!1sen!2sin"
                 frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
           </div>
@@ -453,14 +434,14 @@
         <div class="row justify-content-center pt-5 mt-3">
           <div class="col-12 text-center">
             <p class="mb-2">
-              Designed and Developed by <strong>Ananthu T Mani</strong>
+              Designed and Developed for SPIDER - ISTE BITS
             </p>
             <p class="icons" id="bottomline">
-              <a href="https://github.com/ananthutmani">
-                <i class="pr-2 fa fa-github"></i>
+              <a target="_blank" href="https://spider.istebits.com/">
+                <img class="img-fluid p-2 px-3 mt-1 mr-2" src="CSS/images/spider.png" alt="">
               </a>
-              <a href="https://www.linkedin.com/in/ananthu-t-mani">
-                <i class="pl-2 fa fa-linkedin"></i>
+              <a target="_blank" href="https://istebits.com">
+                <img class="img-fluid p-2" src="CSS/images/isteLogo.png" alt="">
               </a>
             </p>
           </div>
